test/parser/array/055.hac
// "055.hac"
// copy-modified from "050.hac"
// should pass parsing but fail unrolling

pbool x[2];
pbool y[3];

x[0] = true;
x[1] = false;
y[0] = true;
y[1] = true;
y[2] = false;

pbool z[2][2];
z = {x, y};	// error: got [2] and [3]

